--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,109 @@
-/* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+
 
 body {
     height: 100vh;
-    display:flex;
     justify-content: center;
-    background: rgba(0, 0, 0, .5);
     font-family: sans-serif;
+    align-content: center;
+    text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
-.league, .teams, .baseball-stats, .baseball-player {
-    height: 30vh;
-    width: 50%;
+h1 {
+    font-size: 60px;
+    margin: 0;
+}
+
+h2 {
+    display: inline;
+    font-family: 'lobster', cursive;
+    font-size: 40px;
+}
+
+h3 {
+    text-align: center;
+    font-size: 25px;
+}
+
+div {
+    padding: 10px;
+    align-content: center;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-} */
+
+}
+
+#form {
+    padding: 15px;
+}
+
+label {
+    margin-right: 20px;
+}
+
+h1, p {
+    padding-left: 7px;
+    font-family: 'roboto mono', sans-serif;
+}
+
+div#player-info {
+   display: block;
+}
+
+div.select-stats {
+    justify-content: center;
+}
+
+img {
+    height: 50px;
+    width: 50px;
+    float: none;
+    visibility: hidden;
+}
+
+p.stat-title {
+    font-style: italic;
+    font-family: 'permanent marker';
+    text-decoration: underline;
+    padding: 0;
+    text-align: center;
+    margin:0;
+    font-size: 20px;
+}
+
+p.stat-data {
+    font-family: 'kanit', sans-serif;
+    text-align: center;
+    font-size: 18px;
+}
+
+.wallpaper__background-image {
+    position: absolute;
+    z-index: -1;   
+    width: 100%;
+    height: 100%;
+    background-image: url('https://3.bp.blogspot.com/-WQjoRh7aWQo/XF_dZk-k6wI/AAAAAAAAGxw/mVM4k13fRZUWFoBxuP2RyX4wODxOKS5_gCHMYCw/s1600/why-did-home-runs-surge-in-baseball-statistics-provides-twist-on.jpg');
+    background-size: cover;
+    opacity: 0.7;
+    margin:0;
+    padding:0;
+  }
+
+  div.wallpaper {
+      padding: 0;
+  }
+
+  input {
+      width: 150px;
+      height: 25px;
+      font-size: 18px;
+  }
+
+  form#form {
+      padding: 0px;
+  }
+
+  legend, label {
+      font-weight: bold;
+      font-size: 15px;
+  }
