--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-
-
 body {
     height: 100vh;
     justify-content: center;
@@ -52,6 +50,7 @@ div#player-info {
 
 div.select-stats {
     justify-content: center;
+    margin: 25px 250px 25px 250px;
 }
 
 img {
@@ -89,21 +88,26 @@ p.stat-data {
     padding:0;
   }
 
-  div.wallpaper {
+div.wallpaper {
       padding: 0;
-  }
+}
 
-  input {
+input {
       width: 150px;
       height: 25px;
       font-size: 18px;
-  }
+      margin-right: 0px;
+}
 
-  form#form {
+input#input-text {
+    width: 250px;
+}
+
+form#form {
       padding: 0px;
-  }
+}
 
-  legend, label {
+legend, label {
       font-weight: bold;
       font-size: 15px;
-  }
+}
